--- a/workflows/node.js.yml
+++ b/workflows/node.js.yml
@@ -27,7 +27,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: node -v
+      working-directory: pettalk
     - run: npm ci
+      working-directory: pettalk
     - run: npm ls
+      working-directory: pettalk
     - run: npm run build --if-present
+      working-directory: pettalk
     - run: npm test
+      working-directory: pettalk
