--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "@types/node-fetch": "^2.6.12",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4"
+  },
+  "dependencies": {
+    "sentiment": "^5.0.2"
   }
 }
