--- a/pettalk/package.json
+++ b/pettalk/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/language": "^6.5.0",
+    "dotenv": "^16.4.7",
     "next": "15.2.1",
     "openai": "^4.86.2",
     "react": "^19.0.0",
