--- a/pettalk/package.json
+++ b/pettalk/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@google-cloud/language": "^6.5.0",
     "dotenv": "^16.4.7",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "openai": "^4.86.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
